kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopstest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: devopstest
          image: testacrdemo.azurecr.io/node:final
          ports:
            - containerPort: 9002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
