kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopstest-service
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9002
  type: ClusterIP
